--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Rinha de Frontend</title>
-
+    <base data-trunk-public-url />
     <link data-trunk rel="rust" />
     <link data-trunk rel="css" href="./styles.css" />
     <link
