--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Rinha de Frontend</title>
     <base data-trunk-public-url />
     <link data-trunk rel="rust" />
-    <link data-trunk rel="css" href="./styles.css" />
+    <link data-trunk rel="scss" href="./styles.scss" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
