--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
+    <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="black">
+    <meta name="description" content="Rinha de Frontend" />
+    <meta name="author" content="Cleisson Barbosa" />
+    <meta name="keywords" content="Rinha de Frontend" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="google" content="notranslate" />
     <title>Rinha de Frontend</title>
     <base data-trunk-public-url />
     <link data-trunk rel="rust" />
